# obia

./: .gitignore  README.md  classify_detectron.py  cnn_validate.py  config.yml  detectron.py  environment.yml  main.py  mkdocs.yml  pyproject.toml  requirements-doc.txt  requirements.txt  run_detectron.py
docs/: contributing.md  index.md  installation.md  project-structure.md  quickstart.md  status.md  workflows.md
docs/api/: classification.md  detection.md  handlers.md  index.md  segmentation.md  utils.md
docs/examples/: segmentation-quickstart.ipynb
notebooks/: deepfor.ipynb  deepfor2.ipynb  xyz_segmentation.ipynb
obia/detection/: __init__.py  dataset.py  models.py  predict.py  train.py  utils.py
obia/segmentation/: object_detection.py  segment.py  segment_statistics.py
obia/utils/: cost.py  image.py  seeds.py  tiling.py  training.py  utils.py
scripts/: 01_make_seeds.py  DL_Feature_Learning.py  clean_detections.py  combine_detections.py  fig_1_1  laplacian.py  prune_df.py  scratch_20.py  scratch_6.py  scratch_8band_cnn.py  scratch_cnn.py  step1.py  step2.py
scripts/CHM_Seeds/: make_chm_seeds.py
scripts/FirstReturn_Seeds/: make_density_seeds.py
scripts/GPL/: 01_label_crowns.py  02_manual_feats.py  03_train_cnn_embedder.py  04_build_crown_graph.py  05_add_labels.py  05_merge_features.py  06_train_gcn.py  07_infer_full_map.py  08_accuracy_report.py
scripts/SAM/: 01_prepare_chips.py  02_train_sam_decoder.py  03_predict_all.py  03_predict_sam.py  README.md  build_masks_from_gpkg.py  make_stardist_tiles.py  make_tiles.py  merge_crown_segments.py  (+11 more)
(+28 files in other folders)
